[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dialogue/DialogueElements/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Dialogue/DialogueElements/DialogueManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dialogue/DialogueElements/DialogueDatabase.tscn" type="PackedScene" id=3]

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -114.799, 213.193 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 480.0
margin_top = 128.0
margin_right = 598.0
margin_bottom = 256.0

[node name="Panel" type="Panel" parent="."]
margin_top = 256.0
margin_right = 640.0
margin_bottom = 352.0

[node name="Columns" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="Panel/Columns"]
margin_right = 38.0
margin_bottom = 96.0
size_flags_vertical = 1
text = "Name"

[node name="Text" type="Label" parent="Panel/Columns"]
margin_left = 42.0
margin_right = 598.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Dialogue Text"
align = 1
valign = 1

[node name="ButtonSkip" type="Button" parent="Panel/Columns"]
margin_left = 602.0
margin_right = 640.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Skip"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="DialogueManager" parent="." instance=ExtResource( 2 )]

[node name="DialogueDatabase" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Panel/Columns/ButtonSkip" to="." method="_on_ButtonSkip_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
